--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.9",
     "mongoose-seed": "^0.6.0"
   }
